Upgrading to Java 14